Upgrade JDK to 21 version